todo: work on merge function, make both bed files either major or ind snp mode

--- a/annotation/admix/admix.ipynb
+++ b/annotation/admix/admix.ipynb
@@ -11,282 +11,236 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADMIXTURE is a software tool for maximum likelihood estimation of individual ancestries from multilocus SNP genotype datasets. It uses the same statistical model as STRUCTURE but calculates estimates much more rapidly using a fast numerical optimization algorithm."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Convert VCF to PED/MAP Plink format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Admixture requires PED/MAP files from Plink format as input. \n",
-    "\n",
-    "Requires:   \n",
-    "    - PLINK 1.9: https://www.cog-genomics.org/plink2   \n",
-    "    - The following Plink arguments are required:   \n",
-    "        - recode 12 : codes major/minor alleles as 0,1 and 2  \n",
-    "        - geno 0.1 : ignores entries with missing genotypes (will cause admixture error)  \n",
-    "    - The following Plink arguments are optional:  \n",
-    "         -no-fid = No family Id provided  \n",
-    "         -no-parents  = No parent info provided  \n",
-    "         -no-sex  = No sex info provided  \n",
-    "         -no-pheno  = No phenotype info provided  \n",
-    "         -double-id = Use subject ID as family ID since none is provided  \n",
-    "    "
+    "ADMIXTURE is a software tool for estimating maximum likelihood estimation of individual ancestries from multi-locus SNP genotype datasets. It uses the same statistical model as STRUCTURE, but calculates estimates much more rapidly using a fast numerical optimization algorithm."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "###################\n",
+    "## set variables ##\n",
+    "###################\n",
+    "\n",
+    "# specify file name prefix\n",
+    "in_name = 'admix'\n",
+    "\n",
+    "# specify path to 1000g vcf files\n",
+    "ref_dir = '/users/selasady/my_titan_itmi/impala_scripts/annotation/admix/1000g_vcf/'\n",
+    "\n",
+    "# specify desired output directory\n",
+    "out_dir = '/users/selasady/my_titan_itmi/impala_scripts/annotation/admix/'\n",
+    "\n",
+    "# set file paths to exectuables\n",
+    "plink_path = '/users/selasady/my_titan_itmi/tools/plink/plink --noweb'\n",
+    "tabix_path = '/users/selasady/my_titan_itmi/tools/tabix-0.2.6/tabix'\n",
+    "vcftools_path = '/titan/ITMI1/workspaces/users/selasady/tools/vcftools_0.1.13/bin/vcftools'\n",
+    "java_path = '/tools/java/jdk1.7/bin/java'\n",
+    "gatk_path = '/users/selasady/my_titan_itmi/tools/GenomeAnalysisTK.jar'\n",
+    "\n",
+    "# import required modules\n",
+    "import os\n",
+    "import subprocess as sp\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run Plink"
+    "## 1000 genomes phase 3 Marker Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 1000 genomes project created a marker file for running admixture on their phase 3 genomes using the following pipeline: \n",
+    "\n",
+    "http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/admixture_files/README.admixture_20141217\n",
+    "\n",
+    "The PED file created in this pipeline was used for the creation of a marker set for running admixture on our own variant files, as follows: \n",
+    "\n",
+    "- VCFtools to filter 1000 Genomes call set, retaining only bialleleic, non-singelton SNV sites that are a minimum of 2kb apart with the following command:   \n",
+    "\n",
+    "      ./vcftools --gzvcf\n",
+    "      ALL.chr1.phase3_shapeit2_mvncall_integrated_v4.20130502.genotypes.vcf.gz\n",
+    "      --thin 2000 --min-alleles 2 --max-alleles 2 --non-ref-ac 2 --plink --chr 1 --out ALL.chr1.phase3_shapeit2_filtered.20141217  \n",
+    "\n",
+    "\n",
+    "- The resulting Plink PED and MAP files were used for the creation of a marker set for running admixture on INOVA genomes. \n",
+    "\n",
+    "- Files downloaded from: \n",
+    "\n",
+    "    - PED file: http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/admixture_files/ALL.wgs.phase3_shapeit2_filtered.20141217.maf0.05.ped\n",
+    "    - MAP file: http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/admixture_files/ALL.wgs.phase3_shapeit2_filtered.20141217.maf0.05.map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering on minor allele frequencey (MAF) and Linkage Disequilibrium (LD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 1000 genomes PED file was filtered to retain: \n",
+    "- Variants with MAF between .05 and .5  \n",
+    "- LD pruning to inactivate first marker of pair within 50 marker window, having CHM R^2 value > 0.5, steps of 5 according to documentation at http://pngu.mgh.harvard.edu/~purcell/plink/summary.shtml#prune\n",
+    "- A pruned set was output using the following command: \n",
+    "\n",
+    "      \"{} --file {} --out all_chroms_100g_maf_ld --maf 0.05 --max-maf .5 --indep-pairwise 50 5 0.5\".format(plink_path, plink_file)\n",
+    "      \n",
+    "- Variants matching the pruned set were extracted from the PED file and the output was converted to a binary BED/BIM/FAM file set using the following command: \n",
+    "\n",
+    "       ped2bed_cmd = '{} --file {} --extract {} --make-bed --out all_chroms_1000g_pruned'.format(plink_path, plink_file, pruned_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create .POP File Needed for running ADMIXTURE in supervised mode\n",
+    "\n",
+    "Admixture requires a .pop file for running admixture in supervised mode; allowing the algorithm to use variants of known admix to better estimate admixture on input samples. \n",
+    "\n",
+    "The .pop file should correspond to each subject listed in the .fam file containing only one line showing the admix code for known subjects, and a dash for subjects with unknown adxmiture: \n",
+    "\n",
+    "CEU  \n",
+    "YRI  \n",
+    "\\-   \n",
+    "CEU  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PLINK v1.90b3w 64-bit (3 Sep 2015)         https://www.cog-genomics.org/plink2\n",
-      "(C) 2005-2015 Shaun Purcell, Christopher Chang   GNU General Public License v3\n",
-      "Logging to LP6005599-DNA_A02_1to15.log.\n",
-      "Options in effect:\n",
-      "  --chr 1-15\n",
-      "  --double-id\n",
-      "  --geno 0.1\n",
-      "  --memory 15000\n",
-      "  --no-fid\n",
-      "  --no-parents\n",
-      "  --no-pheno\n",
-      "  --no-sex\n",
-      "  --out LP6005599-DNA_A02_1to15\n",
-      "  --recode 12\n",
-      "  --threads 4\n",
-      "  --vcf LP6005599-DNA_A02.genome.vcf.gz\n",
-      "\n",
-      "8192 MB RAM detected; reserving 15000 MB for main workspace.\n",
-      "--vcf: LP6005599-DNA_A02_1to15-temporary.bed +\n",
-      "LP6005599-DNA_A02_1to15-temporary.bim + LP6005599-DNA_A02_1to15-temporary.fam\n",
-      "written.\n",
-      "(48296973 variants skipped.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# read in .fam file and original 1000g ped file specifying ancestry\n",
+    "map_file = pd.read_csv('/users/selasady/my_titan_itmi/impala_scripts/annotation/admix/1000g_vcf/integrated_call_samples_v2.20130502.ALL.ped', sep='\\t')\n",
+    "fam_cols = ['family', 'subject', 'paternal', 'maternal', 'sex','affection']\n",
+    "fam_file = pd.read_csv('/users/selasady/my_titan_itmi/impala_scripts/annotation/admix/1000g_vcf/all_chroms_1000g_pruned.fam', sep=' ', names = fam_cols)\n",
+    "\n",
+    "# match .fam file with 1000g  integrated_call_samples_v2.20130502.ALL.ped by subject id\n",
+    "pop_df = fam_file.merge(map_file, left_on='subject', right_on='Individual ID', how = 'left')\n",
+    "\n",
+    "# keep just the population column and save to file\n",
+    "pop_out = pop_df['Population']\n",
+    "pop_out.to_csv('/users/selasady/my_titan_itmi/impala_scripts/annotation/admix/1000g_vcf/all_chroms_1000g_pruned.pop', header=False, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract Marker Regions from VCF Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running Admixture"
+    "### Convert the binary BED file to a readable map file for extracting matching regions from INOVA VCF files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Requires: \n",
-    "    - Admixture program: https://www.genetics.ucla.edu/software/admixture/\n",
-    "    - 14 = number of admixture populations to use as 'K' value\n",
-    "    - -jN = number of cores to use"
+    "    /users/selasady/my_titan_itmi/tools/plink/plink --noweb --bfile all_chroms_1000g_pruned --recode --out all_chroms_1000g_pruned_exported"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### head all_chroms_1000g_pruned_exported\n",
+    "\n",
+    "1\t1:76838\t0\t76838  \n",
+    "1\t1:83084\t0\t83084  \n",
+    "1\t1:91581\t0\t91581  \n",
+    "1\t1:158006\t0\t158006  \n",
+    "1\t1:173052\t0\t173052  \n",
+    "1\t1:521578\t0\t521578  \n",
+    "1\t1:636285\t0\t636285  \n",
+    "1\t1:662414\t0\t662414  \n",
+    "1\t1:712762\t0\t712762  \n",
+    "1\t1:746189\t0\t746189  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parallel execution requested.  Will use 5 threads.\n",
-      "Random seed: 43\n",
-      "Point estimation method: Block relaxation algorithm\n",
-      "Convergence acceleration algorithm: QuasiNewton, 3 secant conditions\n",
-      "Point estimation will terminate when objective function delta < 0.0001\n",
-      "Estimation of standard errors disabled; will compute point estimates only.\n",
-      "****                   ADMIXTURE Version 1.23                   ****\n",
-      "****                    Copyright 2008-2013                     ****\n",
-      "****          David Alexander, John  Novembre, Ken Lange        ****\n",
-      "****                   Please cite our paper!                   ****\n",
-      "****   Information at www.genetics.ucla.edu/software/admixture  ****\n",
-      "\n",
-      "Size of G: 1x3598517\n",
-      "Performing five EM steps to prime main algorithm\n",
-      "1 (EM) \tElapsed: 1.908\tLoglikelihood: -58826.4\t(delta): 5.08467e+06\n",
-      "2 (EM) \tElapsed: 2.193\tLoglikelihood: -58659.3\t(delta): 167.068\n",
-      "3 (EM) \tElapsed: 1.767\tLoglikelihood: -58635.3\t(delta): 23.9763\n",
-      "4 (EM) \tElapsed: 1.804\tLoglikelihood: -58630.9\t(delta): 4.40029\n",
-      "5 (EM) \tElapsed: 1.937\tLoglikelihood: -58629.9\t(delta): 0.976496\n",
-      "Initial loglikelihood: -58629.9\n",
-      "Starting main algorithm\n",
-      "1 (QN/Block) \tElapsed: 24.504\tLoglikelihood: -58629.8\t(delta): 0.0977728\n",
-      "2 (QN/Block) \tElapsed: 30.402\tLoglikelihood: -58629.8\t(delta): 0\n",
-      "Summary: \n",
-      "Converged in 2 iterations (74.923 sec)\n",
-      "Loglikelihood: -58629.847792\n",
-      "Fst divergences between estimated populations: \n",
-      "\tPop0\tPop1\tPop2\tPop3\tPop4\tPop5\tPop6\tPop7\tPop8\tPop9\tPop10\tPop11\tPop12\t\n",
-      "Pop0\t\n",
-      "Pop1\t0.298\t\n",
-      "Pop2\t0.289\t0.293\t\n",
-      "Pop3\t0.289\t0.293\t0.286\t\n",
-      "Pop4\t0.289\t0.294\t0.287\t0.289\t\n",
-      "Pop5\t0.291\t0.296\t0.288\t0.289\t0.290\t\n",
-      "Pop6\t0.287\t0.292\t0.285\t0.286\t0.288\t0.289\t\n",
-      "Pop7\t0.288\t0.294\t0.287\t0.289\t0.288\t0.290\t0.288\t\n",
-      "Pop8\t0.290\t0.295\t0.287\t0.288\t0.287\t0.290\t0.288\t0.288\t\n",
-      "Pop9\t0.288\t0.293\t0.285\t0.288\t0.289\t0.288\t0.287\t0.286\t0.287\t\n",
-      "Pop10\t0.290\t0.294\t0.287\t0.288\t0.287\t0.290\t0.286\t0.289\t0.287\t0.286\t\n",
-      "Pop11\t0.290\t0.296\t0.286\t0.288\t0.290\t0.289\t0.287\t0.287\t0.289\t0.288\t0.289\t\n",
-      "Pop12\t0.291\t0.297\t0.289\t0.287\t0.290\t0.291\t0.288\t0.288\t0.288\t0.288\t0.289\t0.290\t\n",
-      "Pop13\t0.289\t0.292\t0.287\t0.287\t0.288\t0.287\t0.285\t0.288\t0.287\t0.288\t0.287\t0.287\t0.288\t\n",
-      "Writing output files.\n",
-      "Parallel execution requested.  Will use 5 threads.\n",
-      "Random seed: 43\n",
-      "Point estimation method: Block relaxation algorithm\n",
-      "Convergence acceleration algorithm: QuasiNewton, 3 secant conditions\n",
-      "Point estimation will terminate when objective function delta < 0.0001\n",
-      "Estimation of standard errors disabled; will compute point estimates only.\n",
-      "****                   ADMIXTURE Version 1.23                   ****\n",
-      "****                    Copyright 2008-2013                     ****\n",
-      "****          David Alexander, John  Novembre, Ken Lange        ****\n",
-      "****                   Please cite our paper!                   ****\n",
-      "****   Information at www.genetics.ucla.edu/software/admixture  ****\n",
-      "\n",
-      "Size of G: 1x3400564\n",
-      "Performing five EM steps to prime main algorithm\n",
-      "1 (EM) \tElapsed: 2.187\tLoglikelihood: -54461.4\t(delta): 4.80636e+06\n",
-      "2 (EM) \tElapsed: 2.4\tLoglikelihood: -54304.7\t(delta): 156.702\n",
-      "3 (EM) \tElapsed: 3.011\tLoglikelihood: -54282.2\t(delta): 22.4337\n",
-      "4 (EM) \tElapsed: 1.934\tLoglikelihood: -54278.1\t(delta): 4.11093\n",
-      "5 (EM) \tElapsed: 2.667\tLoglikelihood: -54277.2\t(delta): 0.908451\n",
-      "Initial loglikelihood: -54277.2\n",
-      "Starting main algorithm\n",
-      "1 (QN/Block) \tElapsed: 20.586\tLoglikelihood: -54277.1\t(delta): 0.0897687\n",
-      "2 (QN/Block) \tElapsed: 21.266\tLoglikelihood: -54277.1\t(delta): 0\n",
-      "Summary: \n",
-      "Converged in 2 iterations (64.773 sec)\n",
-      "Loglikelihood: -54277.122936\n",
-      "Fst divergences between estimated populations: \n",
-      "\tPop0\tPop1\tPop2\tPop3\tPop4\tPop5\tPop6\tPop7\tPop8\tPop9\tPop10\tPop11\tPop12\t\n",
-      "Pop0\t\n",
-      "Pop1\t0.297\t\n",
-      "Pop2\t0.288\t0.292\t\n",
-      "Pop3\t0.286\t0.290\t0.285\t\n",
-      "Pop4\t0.288\t0.293\t0.287\t0.283\t\n",
-      "Pop5\t0.291\t0.296\t0.289\t0.287\t0.288\t\n",
-      "Pop6\t0.288\t0.290\t0.286\t0.283\t0.288\t0.289\t\n",
-      "Pop7\t0.289\t0.290\t0.287\t0.284\t0.286\t0.289\t0.286\t\n",
-      "Pop8\t0.288\t0.294\t0.287\t0.283\t0.288\t0.290\t0.285\t0.286\t\n",
-      "Pop9\t0.286\t0.293\t0.286\t0.284\t0.285\t0.290\t0.286\t0.286\t0.287\t\n",
-      "Pop10\t0.290\t0.294\t0.290\t0.286\t0.289\t0.292\t0.288\t0.288\t0.289\t0.286\t\n",
-      "Pop11\t0.287\t0.294\t0.287\t0.283\t0.286\t0.288\t0.287\t0.287\t0.286\t0.287\t0.290\t\n",
-      "Pop12\t0.289\t0.295\t0.290\t0.285\t0.288\t0.290\t0.289\t0.287\t0.287\t0.285\t0.291\t0.287\t\n",
-      "Pop13\t0.285\t0.291\t0.286\t0.285\t0.286\t0.291\t0.286\t0.285\t0.287\t0.286\t0.289\t0.286\t0.288\t\n",
-      "Writing output files.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!for f in *.ped; do ~/tools/admixture_macosx-1.23/admixture -j5 $f 14; done"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Add Vendor_ID column to each Q file"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Add column containing vendor id to each .Q file. Requires\n",
-    "    - -i.q2 : extension required for mac, even though .i still modifies the file in place. I don't know why. This also creates .q2 files that are identical to the modified original version. Hopefully you are not running this on a mac and can avoid this altogether. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "!for f in *.Q; do sed -i.q2 \"s/$/\\ ${f%%.*}/\" $f; done"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To Do: \n",
-    "    - Find out which population corresponds to which q value \n",
-    "    (emailed admixture author for help, waiting for response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create merged Q score file as csv"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "!cat *.Q | sed 's/ /\\,/g' >> master_admix.csv"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Upload Admixture Table to Impala"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# read in master_admix.txt as pandas table\n",
-    "master_admix = pd.read_csv('./master_admix.csv')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
