--- a/admix/admix_pipeline.ipynb
+++ b/admix/admix_pipeline.ipynb
@@ -15,40 +15,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "###################\n",
-    "## set variables ##\n",
-    "###################\n",
-    "\n",
-    "# specify file name prefix\n",
-    "in_name = 'admix'\n",
-    "\n",
-    "# specify path to 1000g vcf files\n",
-    "ref_dir = '/users/selasady/my_titan_itmi/impala_scripts/annotation/admix/1000g_vcf/'\n",
-    "\n",
-    "# specify desired output directory\n",
-    "out_dir = '/users/selasady/my_titan_itmi/impala_scripts/annotation/admix/'\n",
-    "\n",
-    "# set file paths to exectuables\n",
-    "plink_path = '/users/selasady/my_titan_itmi/tools/plink/plink --noweb'\n",
-    "tabix_path = '/users/selasady/my_titan_itmi/tools/tabix-0.2.6/tabix'\n",
-    "vcftools_path = '/titan/ITMI1/workspaces/users/selasady/tools/vcftools_0.1.13/bin/vcftools'\n",
-    "java_path = '/tools/java/jdk1.7/bin/java'\n",
-    "gatk_path = '/users/selasady/my_titan_itmi/tools/GenomeAnalysisTK.jar'\n",
-    "\n",
-    "# import required modules\n",
-    "import os\n",
-    "import subprocess as sp\n",
-    "import pandas as pd"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,7 +43,10 @@
     "- Files downloaded from: \n",
     "\n",
     "    - PED file: http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/admixture_files/ALL.wgs.phase3_shapeit2_filtered.20141217.maf0.05.ped\n",
-    "    - MAP file: http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/admixture_files/ALL.wgs.phase3_shapeit2_filtered.20141217.maf0.05.map"
+    "    - MAP file: http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/admixture_files/ALL.wgs.phase3_shapeit2_filtered.20141217.maf0.05.map\n",
+    " \n",
+    "- Panel File:\n",
+    "http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/integrated_call_samples_v3.20130502.ALL.panel"
    ]
   },
   {
